test_outputs/connlist/udn_test_3_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => bar/mybar[Pod] : All Connections
0.0.0.0-255.255.255.255[External] => default/app-1[Pod] : All Connections
bar/mybar[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
bar/mybar[Pod] => default/app-1[Pod] : TCP 80
default/app-1[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
default/app-1[Pod] => bar/mybar[Pod] : All Connections

Permitted connectivity analyzed in primary UDN green:
0.0.0.0-255.255.255.255[External] => green[udn]/webserver-2[Pod] : TCP 9001
0.0.0.0-255.255.255.255[External] => green[udn]/webserver[Pod] : TCP 9001
green[udn]/webserver-2[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections
green[udn]/webserver[Pod] => 0.0.0.0-255.255.255.255[External] : All Connections

Workload-to-Networks Mapping:
bar/mybar[Pod]: pod_network
default/app-1[Pod]: pod_network
green/webserver-2[Pod]: green[UDN]
green/webserver[Pod]: green[UDN]
